# eventify-dvs

./: .gitignore  README.md  pyproject.toml
scripts/: render_dvs_gesture.py
src/eventify/: __init__.py  _fast.py  cli.py  dvs.py  fast.py
tests/: test_cli.py  test_fast_path.py  test_frame_stream.py  test_frame_to_event_tuples.py  test_interpolate_frames.py  test_video_to_event_stream.py  test_write_hdf5.py
