[project]
name = "eventify-dvs"
version = "0.1.1"
description = "Convert video files or webcam feeds into simulated event-camera (DVS) data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Arpan Pandey" }]
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.8",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "typer>=0.26.8",
]

[project.scripts]
eventify = "eventify.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventify"]
